...
    profileNavGraphBuilder()
    filterNavGraphBuilder()
}

private val tabsItems = listOf(
    TabsItem(iconRes = R.drawable.ic_employees_catalog, route = EMPLOYEES_NAV_ROUTE, name = "Сотрудники"),
    TabsItem(iconRes = R.drawable.ic_filter, route = FILTER_NAV_ROUTE, name = "Фильтр"),
    TabsItem(iconRes = R.drawable.ic_profile, route = PROFILE_NAV_ROUTE, name = "Профиль"),
)

@OptIn(ExperimentalMaterial3Api::class)
@Composable
private fun TabsScreen() {
    val navController = rememberNavController()
...
