...
        Button(
            modifier = Modifier
                .padding(20.dp)
                .align(Alignment.BottomCenter),
            onClick = remOnClick,
        ) {
            Text("Выйти")
        }
    }
}

