...
                    .padding(horizontal = 16.dp)
                    .weight(1f),
                value = state.searchText,
                onValueChange = model::onSearchTextChange,
                placeholder = {
                    Text(
                        text = "Введите ФИО сотрудника",
                        style = Typography.titleMedium,
                        color = MaterialTheme.colorScheme.secondary,
                    )
                },
                singleLine = true,
            )
...
